--- a/catalog-item.html
+++ b/catalog-item.html
@@ -93,13 +93,13 @@
                                     </div>
                                 </div>
                                 <div class="swiper-button-prev mbtn">
-                                    <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M11.7823 15L11.4176 15C11.0799 14.9255 10.7554 14.7973 10.4552 14.6197C7.33452 12.754 4.21382 10.8884 1.09313 9.02315C0.853996 8.87999 0.632668 8.7067 0.434133 8.50717C-0.109962 7.95633 -0.140359 7.22673 0.330177 6.61124C0.539574 6.35359 0.794186 6.13995 1.08036 5.98179C4.20632 4.11438 7.33229 2.24951 10.4583 0.387169C10.7017 0.242791 10.962 0.131789 11.2328 0.0569164C11.9623 -0.145291 12.5787 0.201442 12.8523 0.935474C12.9793 1.27397 13 1.62767 13 1.98518C13 5.63168 13 9.27839 13 12.9253C13 13.087 13 13.2486 12.9884 13.4083C12.9508 13.8799 12.8243 14.3173 12.4833 14.659C12.2863 14.8561 12.0389 14.9404 11.7823 15Z" fill="#FFB800"/>
+                                    <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
                                     </svg>
                                 </div>
                                 <div class="swiper-button-next mbtn">
-                                    <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.21768 0H1.58244C1.92006 0.0744663 2.24465 0.202748 2.54479 0.380328C5.66548 2.24605 8.78618 4.11156 11.9069 5.97685C12.146 6.12001 12.3673 6.2933 12.5659 6.49283C13.11 7.04367 13.1404 7.77327 12.6698 8.38877C12.4604 8.64641 12.2058 8.86005 11.9196 9.01821C8.79367 10.8856 5.66771 12.7505 2.54175 14.6128C2.29828 14.7572 2.03797 14.8682 1.76725 14.9431C1.03773 15.1453 0.421294 14.7986 0.147726 14.0645C0.0206696 13.726 0 13.3723 0 13.0148C0 9.36832 0 5.72161 0 2.07469C0 1.91305 -8.33412e-08 1.75141 0.0115505 1.59167C0.0492421 1.12007 0.175691 0.682689 0.516738 0.341027C0.713707 0.143891 0.961134 0.0595847 1.21768 0Z" fill="#FFB800"/>
+                                    <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
                                     </svg>
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -134,7 +134,28 @@
                 <div class="container">
                     <h2 class="apart-collection__title display2 decor-display">Другие номера</h2>
                     <ul class="apart-collection__grid">
-                        <li class="apart-card" style="background-image: url(img/apart2.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart2.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart2.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -153,7 +174,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">De Luxe</h3>
-        <p class="apart-card__desc">Просторный и светлый номер с оригинальным дизайнерским решением...</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">Просторный и светлый номер с оригинальным дизайнерским решением...</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -162,9 +185,32 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
-                        <li class="apart-card" style="background-image: url(img/apart3.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart3.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart3.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -183,7 +229,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">Junior Suite</h3>
-        <p class="apart-card__desc">В номерах от 21 кв.м. Вас ждут две односпальные кровати или одна...</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">В номерах от 21 кв.м. Вас ждут две односпальные кровати или одна...</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -192,9 +240,32 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
-                        <li class="apart-card" style="background-image: url(img/apart4.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart4.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart4.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -213,7 +284,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">Luxe</h3>
-        <p class="apart-card__desc">Просторный и светлый двухкомнатный номер с дизайнерской изюминкой...</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">Просторный и светлый двухкомнатный номер с дизайнерской изюминкой...</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -222,9 +295,32 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
-                        <li class="apart-card" style="background-image: url(img/apart5.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart5.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart5.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -243,7 +339,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">Duplex</h3>
-        <p class="apart-card__desc">Уникальное дизайнерское решение – двухуровневый номер. На первом</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">Уникальное дизайнерское решение – двухуровневый номер. На первом</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -252,6 +350,8 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
                     </ul>
