--- a/index.html
+++ b/index.html
@@ -68,7 +68,28 @@
                 <div class="container">
                     <h2 class="apart__title display2 decor-display">Наши номера</h2>
                     <ul class="apart__grid">
-                        <li class="apart-card" style="background-image: url(img/apart.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -87,7 +108,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">Duplex-Apartment</h3>
-        <p class="apart-card__desc">Уникальное дизайнерское решение – двухуровневый номер. На первом уровне...</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">Уникальное дизайнерское решение – двухуровневый номер. На первом уровне...</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -96,9 +119,32 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
-                        <li class="apart-card" style="background-image: url(img/apart2.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart2.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart2.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -117,7 +163,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">De Luxe</h3>
-        <p class="apart-card__desc">Просторный и светлый номер с оригинальным дизайнерским решением...</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">Просторный и светлый номер с оригинальным дизайнерским решением...</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -126,9 +174,32 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
-                        <li class="apart-card" style="background-image: url(img/apart3.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart3.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart3.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -147,7 +218,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">Junior Suite</h3>
-        <p class="apart-card__desc">В номерах от 21 кв.м. Вас ждут две односпальные кровати или одна...</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">В номерах от 21 кв.м. Вас ждут две односпальные кровати или одна...</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -156,9 +229,32 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
-                        <li class="apart-card" style="background-image: url(img/apart4.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart4.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart4.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -177,7 +273,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">Luxe</h3>
-        <p class="apart-card__desc">Просторный и светлый двухкомнатный номер с дизайнерской изюминкой...</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">Просторный и светлый двухкомнатный номер с дизайнерской изюминкой...</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -186,9 +284,32 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
-                        <li class="apart-card" style="background-image: url(img/apart5.webp);">
+                        <li class="apart-card _apart-slider">
+    <div class="apart-card__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/apart5.webp" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/apart5.webp" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="swiper-button-prev mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.514478 7.43514L5.48184 13.0123C5.77103 13.3179 6.21333 13.3179 6.48551 13.0123C6.7577 12.7067 6.7577 12.2101 6.48551 11.8854L2.01149 6.86214L6.48551 1.83891C6.7577 1.53332 6.7577 1.01763 6.48551 0.71203C6.21333 0.406435 5.77103 0.406435 5.48183 0.712031L0.514478 6.30825C0.242294 6.61385 0.242294 7.11044 0.514478 7.43514Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+    <div class="swiper-button-next mbtn">
+        <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.48551 6.56486L1.51815 0.987742C1.22895 0.682146 0.786655 0.682146 0.514471 0.987742C0.242287 1.29334 0.242287 1.78993 0.514471 2.11463L4.98849 7.13786L0.514471 12.1611C0.242287 12.4667 0.242287 12.9824 0.514471 13.288C0.786655 13.5936 1.22895 13.5936 1.51815 13.288L6.48551 7.69175C6.75769 7.38615 6.75769 6.88956 6.48551 6.56486Z" fill="#FF4D00"/>
+        </svg>
+    </div>
+
     <div class="apart-card__top">
         <div class="apart-card__people">
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -207,7 +328,9 @@
 
     <div class="apart-card__content">
         <h3 class="apart-card__title">Duplex</h3>
-        <p class="apart-card__desc">Уникальное дизайнерское решение – двухуровневый номер. На первом</p>
+        <p class="apart-card__desc">
+            <span class="apart-card__desc-preview">Уникальное дизайнерское решение – двухуровневый номер. На первом</span>
+        </p>
     </div>
 
     <div class="apart-card__bottom">
@@ -216,6 +339,8 @@
         </div>
         <a href="" class="apart-card__link mbtn mbtn-accent">Подробнее</a>
     </div>
+
+    <p class="apart-card__desc-full">В номерах категории "Junior Suite" от 21 кв.м. вас ждут две одноcпальные кровати или одна большая двуспальная кровать размером «king size» с ортопедическими матрасами, качественным белоснежным постельным бельем, воздушными одеялами и подушками, а также уютный махровый халат, тапочки и аксессуары гостеприимства. Здесь будет комфортно как семейной паре, так и гостям, посетившим город по рабочим вопросам.</p>
 </li>
 
                     </ul>
