--- a/reserve.html
+++ b/reserve.html
@@ -125,10 +125,34 @@
                             <div class="step" data-step="2">
                                 <div class="step__slider swiper-container">
     <ul class="swiper-wrapper">
-        <li class="apart-card2 swiper-slide">
-    <div class="apart-card2__img">
-        <img src="img/apart2.webp" alt="">
+        <li class="apart-card2 swiper-slide _apart-slider">
+
+    <div class="apart-card2__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart2.webp" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart2.webp" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-button-prev mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.902098 4.95455L4.39267 8.87361C4.59589 9.08835 4.9067 9.08835 5.09796 8.87361C5.28923 8.65887 5.28923 8.30991 5.09796 8.08175L1.95405 4.55191L5.09796 1.02207C5.28922 0.807329 5.28922 0.44495 5.09796 0.230207C4.9067 0.0154648 4.59589 0.0154648 4.39267 0.230208L0.902098 4.16269C0.710834 4.37743 0.710834 4.72639 0.902098 4.95455Z" fill="#FF4D00"/>
+            </svg>
+        </div>
+        <div class="swiper-button-next mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.0979 5.04545L1.60732 1.12639C1.4041 0.911646 1.0933 0.911646 0.902035 1.12639C0.710771 1.34113 0.710771 1.69009 0.902035 1.91825L4.04594 5.44809L0.902035 8.97793C0.710771 9.19267 0.710771 9.55505 0.902035 9.76979C1.0933 9.98454 1.4041 9.98454 1.60732 9.76979L5.0979 5.83731C5.28916 5.62257 5.28916 5.27361 5.0979 5.04545Z" fill="#FF4D00"/>
+            </svg>
+        </div>
     </div>
+
+
     <div class="apart-card2__content">
         <div class="apart-card2__top">
             <h3 class="apart-card2__title">De Luxe</h3>
@@ -149,10 +173,34 @@
     </div>
 </li>
 
-        <li class="apart-card2 swiper-slide">
-    <div class="apart-card2__img">
-        <img src="img/apart3.webp" alt="">
+        <li class="apart-card2 swiper-slide _apart-slider">
+
+    <div class="apart-card2__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart3.webp" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart3.webp" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-button-prev mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.902098 4.95455L4.39267 8.87361C4.59589 9.08835 4.9067 9.08835 5.09796 8.87361C5.28923 8.65887 5.28923 8.30991 5.09796 8.08175L1.95405 4.55191L5.09796 1.02207C5.28922 0.807329 5.28922 0.44495 5.09796 0.230207C4.9067 0.0154648 4.59589 0.0154648 4.39267 0.230208L0.902098 4.16269C0.710834 4.37743 0.710834 4.72639 0.902098 4.95455Z" fill="#FF4D00"/>
+            </svg>
+        </div>
+        <div class="swiper-button-next mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.0979 5.04545L1.60732 1.12639C1.4041 0.911646 1.0933 0.911646 0.902035 1.12639C0.710771 1.34113 0.710771 1.69009 0.902035 1.91825L4.04594 5.44809L0.902035 8.97793C0.710771 9.19267 0.710771 9.55505 0.902035 9.76979C1.0933 9.98454 1.4041 9.98454 1.60732 9.76979L5.0979 5.83731C5.28916 5.62257 5.28916 5.27361 5.0979 5.04545Z" fill="#FF4D00"/>
+            </svg>
+        </div>
     </div>
+
+
     <div class="apart-card2__content">
         <div class="apart-card2__top">
             <h3 class="apart-card2__title">Duplex</h3>
@@ -173,10 +221,34 @@
     </div>
 </li>
 
-        <li class="apart-card2 swiper-slide">
-    <div class="apart-card2__img">
-        <img src="img/apart4.webp" alt="">
+        <li class="apart-card2 swiper-slide _apart-slider">
+
+    <div class="apart-card2__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart4.webp" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart4.webp" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-button-prev mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.902098 4.95455L4.39267 8.87361C4.59589 9.08835 4.9067 9.08835 5.09796 8.87361C5.28923 8.65887 5.28923 8.30991 5.09796 8.08175L1.95405 4.55191L5.09796 1.02207C5.28922 0.807329 5.28922 0.44495 5.09796 0.230207C4.9067 0.0154648 4.59589 0.0154648 4.39267 0.230208L0.902098 4.16269C0.710834 4.37743 0.710834 4.72639 0.902098 4.95455Z" fill="#FF4D00"/>
+            </svg>
+        </div>
+        <div class="swiper-button-next mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.0979 5.04545L1.60732 1.12639C1.4041 0.911646 1.0933 0.911646 0.902035 1.12639C0.710771 1.34113 0.710771 1.69009 0.902035 1.91825L4.04594 5.44809L0.902035 8.97793C0.710771 9.19267 0.710771 9.55505 0.902035 9.76979C1.0933 9.98454 1.4041 9.98454 1.60732 9.76979L5.0979 5.83731C5.28916 5.62257 5.28916 5.27361 5.0979 5.04545Z" fill="#FF4D00"/>
+            </svg>
+        </div>
     </div>
+
+
     <div class="apart-card2__content">
         <div class="apart-card2__top">
             <h3 class="apart-card2__title">Luxe</h3>
@@ -197,10 +269,34 @@
     </div>
 </li>
 
-        <li class="apart-card2 swiper-slide">
-    <div class="apart-card2__img">
-        <img src="img/apart5.webp" alt="">
+        <li class="apart-card2 swiper-slide _apart-slider">
+
+    <div class="apart-card2__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart5.webp" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart5.webp" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-button-prev mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.902098 4.95455L4.39267 8.87361C4.59589 9.08835 4.9067 9.08835 5.09796 8.87361C5.28923 8.65887 5.28923 8.30991 5.09796 8.08175L1.95405 4.55191L5.09796 1.02207C5.28922 0.807329 5.28922 0.44495 5.09796 0.230207C4.9067 0.0154648 4.59589 0.0154648 4.39267 0.230208L0.902098 4.16269C0.710834 4.37743 0.710834 4.72639 0.902098 4.95455Z" fill="#FF4D00"/>
+            </svg>
+        </div>
+        <div class="swiper-button-next mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.0979 5.04545L1.60732 1.12639C1.4041 0.911646 1.0933 0.911646 0.902035 1.12639C0.710771 1.34113 0.710771 1.69009 0.902035 1.91825L4.04594 5.44809L0.902035 8.97793C0.710771 9.19267 0.710771 9.55505 0.902035 9.76979C1.0933 9.98454 1.4041 9.98454 1.60732 9.76979L5.0979 5.83731C5.28916 5.62257 5.28916 5.27361 5.0979 5.04545Z" fill="#FF4D00"/>
+            </svg>
+        </div>
     </div>
+
+
     <div class="apart-card2__content">
         <div class="apart-card2__top">
             <h3 class="apart-card2__title">Junior Suite</h3>
@@ -221,10 +317,34 @@
     </div>
 </li>
 
-        <li class="apart-card2 swiper-slide">
-    <div class="apart-card2__img">
-        <img src="img/apart.webp" alt="">
+        <li class="apart-card2 swiper-slide _apart-slider">
+
+    <div class="apart-card2__slider swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart.webp" alt="">
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="apart-card2__img">
+                    <img src="img/apart.webp" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="swiper-button-prev mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.902098 4.95455L4.39267 8.87361C4.59589 9.08835 4.9067 9.08835 5.09796 8.87361C5.28923 8.65887 5.28923 8.30991 5.09796 8.08175L1.95405 4.55191L5.09796 1.02207C5.28922 0.807329 5.28922 0.44495 5.09796 0.230207C4.9067 0.0154648 4.59589 0.0154648 4.39267 0.230208L0.902098 4.16269C0.710834 4.37743 0.710834 4.72639 0.902098 4.95455Z" fill="#FF4D00"/>
+            </svg>
+        </div>
+        <div class="swiper-button-next mbtn">
+            <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.0979 5.04545L1.60732 1.12639C1.4041 0.911646 1.0933 0.911646 0.902035 1.12639C0.710771 1.34113 0.710771 1.69009 0.902035 1.91825L4.04594 5.44809L0.902035 8.97793C0.710771 9.19267 0.710771 9.55505 0.902035 9.76979C1.0933 9.98454 1.4041 9.98454 1.60732 9.76979L5.0979 5.83731C5.28916 5.62257 5.28916 5.27361 5.0979 5.04545Z" fill="#FF4D00"/>
+            </svg>
+        </div>
     </div>
+
+
     <div class="apart-card2__content">
         <div class="apart-card2__top">
             <h3 class="apart-card2__title">Duplex Apartment</h3>
