--- a/nav.html
+++ b/nav.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link rel="stylesheet" href="css/libs.min.css">
+<!--    <link rel="stylesheet" href="css/libs.min.css">-->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Главная</title>
 </head>
+
 
 
 <style>
@@ -69,7 +71,10 @@
 
 <!-- <div class="modal-backdrop show"></div> -->
     <!--  -->
-    <script src="js/libs.min.js"></script>
+    <!--<script src="js/libs.min.js"></script>-->
+<script src="js/jquery.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/main.min.js"></script>
 
 </body>
