--- a/reserve3.html
+++ b/reserve3.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link rel="stylesheet" href="css/libs.min.css">
+<!--    <link rel="stylesheet" href="css/libs.min.css">-->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Резервирование номера</title>
 </head>
+
 
 <body class="page">
     <div class="wrapper">
@@ -89,6 +91,11 @@
         <footer class="footer">
             <div class="container">
     <div class="footer__inner">
+        <button class="footer__scroll-top mbtn mbtn-accent">
+            <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.25133 0.542671L0.965905 7.95854C0.566704 8.39029 0.566704 9.05061 0.965905 9.45696C1.36511 9.86331 2.01381 9.86331 2.43796 9.45696L8.99984 2.77759L15.5617 9.45696C15.9609 9.86331 16.6346 9.86331 17.0338 9.45696C17.433 9.05061 17.433 8.39029 17.0338 7.95854L9.72339 0.542671C9.32419 0.136322 8.67549 0.136322 8.25133 0.542671Z" fill="white"/>
+            </svg>
+        </button>
         <a href="" class="footer__logo">
             <img src="img/logo.svg" alt="">
         </a>
@@ -134,7 +141,10 @@
         </footer>
     </div>
 
-    <script src="js/libs.min.js"></script>
+    <!--<script src="js/libs.min.js"></script>-->
+<script src="js/jquery.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/main.min.js"></script>
 
 </body>
